# A-Simulation-Optimization-Decision-Framework-for-Composite-Tunnel-Support-Design

./: CITATION.cff  CONTRIBUTING.md  MANIFEST.json  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: experiment.example.yaml
data/geometry/: README.md  SeccionSMIGTunelVer02a.dxf
data/input/: NombresSostenimiento.csv  steel_profiles.csv
docs/: ARCHITECTURE.md  REPRODUCIBILITY.md  THIRD_PARTY_NOTICES.md
notebooks/: README.md  graficas_resultados.ipynb  pso_optimiza.ipynb
scripts/: check_repository.py  graficas_resultados_legacy.py  run_pso.bat  run_pso_legacy.py
src/tunnel_support_optimization/: __init__.py  modelo_tunel.py  settings.py
tests/: test_settings.py
