[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-support-optimization"
version = "0.1.0"
description = "PLAXIS 2D and PSO workflow for composite tunnel-support selection"
requires-python = ">=3.8,<3.9"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
